objects/Indicator_Area_Student__c.object
<CustomObject>
    <description>The Indicator Area/Student object is a joiner object that associates an Indicator Area and a Student.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is the Indicator Area associated to this Student active? If this box is unchecked then the Student no longer requires intervention in this area.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Effective_Date__c</fullName>
        <label>IA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indicator_Area__c</fullName>
        <inlineHelpText>This field joins the Indicator Area/Student record to the correct Indicator Area</inlineHelpText>
        <label>Indicator Area</label>
        <referenceTo>Indicator_Area__c</referenceTo>
        <relationshipLabel>Indicator Area/Student</relationshipLabel>
        <relationshipName>Indicator_Area_Student</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>System generated reference number that includes the Student Id and the Indicator ID. This field should not be modified.</inlineHelpText>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <inlineHelpText>This field joins the Indicator Area/Student record to the correct Student</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Indicator Area/Student</relationshipLabel>
        <relationshipName>Indicator_Area_Student</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Indicator_Area_Student__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Indicator Area/Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Indicator Area/Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA/S -{000}</displayFormat>
        <label>IA/Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicator Area/Student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_IA_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	NOT(
		OR((CONTAINS($Profile.Name, &apos;System Administrator&apos;)),
			(CONTAINS($Profile.Name, &apos;Tier 1 Super Administrators&apos;)))),
 	ISCHANGED(IA_Effective_Date__c)
)</errorConditionFormula>
        <errorDisplayField>IA_Effective_Date__c</errorDisplayField>
        <errorMessage>You do not have access to change the IA Effective Date. Please submit a Service Desk case if you need the IA Effective Date to be changed.</errorMessage>
    </validationRules>
</CustomObject>