objects/Indicator_Area_Student__c/fields/IA_Student_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>IA_Student_18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA Student 18 digit ID</label>
    <type>Text</type>
</CustomField>