objects/Indicator_Area_Student__c/validationRules/Valid_IA_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_IA_Effective_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	NOT(
		OR((CONTAINS($Profile.Name, &apos;System Administrator&apos;)),
			(CONTAINS($Profile.Name, &apos;Tier 1 Super Administrators&apos;)))),
 	ISCHANGED(IA_Effective_Date__c)
)</errorConditionFormula>
    <errorDisplayField>IA_Effective_Date__c</errorDisplayField>
    <errorMessage>You do not have access to change the IA Effective Date. Please submit a Service Desk case if you need the IA Effective Date to be changed.</errorMessage>
</ValidationRule>